[package]
name = "rustls-tokio-postgres"
version = "0.2.0"
edition = "2024"
authors = ["Ryan Fowler"]
description = "TLS implementation for tokio-postgres using rustls"
repository = "https://github.com/ryanfowler/rustls-tokio-postgres"
license = "Apache-2.0"
keywords = ["tokio-postgres", "rustls", "postgres", "sql"]
categories = ["database"]

[features]
default = []
channel-binding = ["dep:sha2", "dep:x509-parser"]
native-roots = ["dep:rustls-native-certs"]
webpki-roots = ["dep:webpki-roots"]

[dependencies]
rustls = { version = "0.23" }
rustls-native-certs = { version = "0.8", optional = true }
rustls-pki-types = { version = "1.12" }
sha2 = { version = "0.11", optional = true }
tokio = { version = "1.47" }
tokio-postgres = { version = "0.7" }
tokio-rustls = { version = "0.26" }
webpki-roots = { version = "1.0", optional = true }
x509-parser = { version = "0.18", optional = true }

[dev-dependencies]
rcgen = { version = "0.14" }
tokio = { version = "1.47", features = ["io-util", "macros", "net", "rt-multi-thread"] }
tokio-rustls = { version = "0.26" }

[package.metadata.docs.rs]
all-features = true
